# spiri_navigation-1

./: README.md
position_controller/: CMakeLists.txt  package.xml
position_controller/src/: pid.cpp  position_controller_mocap.cpp
spiri_lsd_slam/: readme.md  spiri_lsd_slam.launch
spiri_motion_primitives/: CMakeLists.txt  CMakeLists.txt~  package.xml
spiri_motion_primitives/action/: SpiriMoveTo.action  SpiriPrimitive.action
spiri_motion_primitives/include/attitude_control/: attitude_control.h
spiri_motion_primitives/include/spiri_motion_primitives_server/: spiri_motion_primitives_server.h
spiri_motion_primitives/include/utils/: pid.h
spiri_motion_primitives/launch/: attitude_control.launch
spiri_motion_primitives/src/: attitude_control.cpp  example_motions.cpp  go_to_example_client.cpp  pid.cpp  spiri_motion_primitives_server.cpp
spiri_optical_flow/: CMakeLists.txt  package.xml
spiri_optical_flow/launch/: optflow.launch  optflow_dense.launch
spiri_optical_flow/src/: dense_optflow.cpp  optflow_node.cpp
spiri_pose_estimation/: CMakeLists.txt  package.xml
spiri_pose_estimation/include/spiri_pose_estimation/: pose_estimation_node.h  sim_pose_estimation_node.h
spiri_pose_estimation/launch/: pose_estimation.launch  pose_estimation_demo.launch
spiri_pose_estimation/src/: main.cpp  pose_estimation_node.cpp  sim_main.cpp  sim_pose_estimation_node.cpp
