<?xml version="1.0"?>
<package>
  <name>spiri_optical_flow</name>
  <version>0.0.1</version>
  <description>Spiri Optical Flow</description>

  <maintainer email="paul.hollensen@pleiades.ca">Paul Hollensen</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export></export>
</package>
