<package>
  <name>spiri_pose_estimation</name>
  <version>0.1.3</version>
  <description>
    spiri_pose_estimation contains a pose estimation node based on hector_pose_estimation
  </description>
  <maintainer email="arnold.kalmbach@pleiades.ca">Arnold Kalmbach</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_pose_estimation</url>

  <author email="arnold.kalmbach@pleiades.ca">Arnold Kalmbach</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>hector_pose_estimation_core</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_filters</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>hector_pose_estimation_core</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_filters</run_depend>

</package>
